feat: create user module